Добавлен и подключен файл functions

--- a/index.html
+++ b/index.html
@@ -227,5 +227,8 @@
     </section>
   </template>
 
+  <!-- Подключение внешних скриптов -->
+  <script src="\js\functions.js" type="module"></script>
+
 </body>
 </html>
