--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
   </template>
 
   <!-- Подключение внешних скриптов -->
+  <script src="\js\main.js" type="module"></script>
   <script src="\js\functions.js" type="module"></script>
 
 </body>
