--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
   <!-- Подключение внешних скриптов -->
   <script src="\js\main.js" type="module"></script>
-  <script src="\js\functions.js" type="module"></script>
+  <script src="\js\functions.js"></script>
 
 </body>
 </html>
