--- a/index.html
+++ b/index.html
@@ -227,6 +227,14 @@
     </section>
   </template>
 
+  <!-- Шаблон для комментариев -->
+  <template id="comment">
+    <li class="social__comment">
+      <img class="social__picture" src="" alt="" width="35" height="35">
+      <p class="social__text"></p>
+    </li>
+  </template>
+
   <!-- Подключение внешних скриптов -->
   <script src="\js\main.js" type="module"></script>
 
