--- a/index.html
+++ b/index.html
@@ -237,9 +237,8 @@
   </template>
 
   <!-- Подключение внешних скриптов -->
-  <script src="./vendor/pristine/pristine.min.js"></script>
-  <script src="./vendor//nouislider/nouislider.js"></script>
-  <script src="\js\main.js" type="module"></script>
-
+  <script src="vendor/nouislider/nouislider.js"></script>
+  <script src="vendor/pristine/pristine.min.js"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 </html>
